Removed src and img folders

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <h1>Nicholas Guzy</h1>
-    <video class="video-background" autoplay loop> <source src="./img/background.mp4"> </video>
-    <img class="portfolioPicture" src="./img/portfolioPicture.jpg" />
+    <video class="video-background" autoplay loop> <source src="./background.mp4"> </video>
+    <img class="portfolioPicture" src="./portfolioPicture.jpg" />
     <div class="headline">
       <h2>Full Stack Web Developer</h2>
     </div>
