added css folder and img folder, also updating their paths in html. index is in root to host on gh-pages.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
     <h1>Nicholas Guzy</h1>
-    <video class="video-background" autoplay loop> <source src="./background.mp4"> </video>
-    <img class="portfolioPicture" src="./portfolioPicture.jpg" />
+    <!-- <video class="video-background" autoplay loop> <source src="./background.mp4"> </video> -->
+    <img class="portfolioPicture" src="./img/portfolioPicture.jpg" />
     <div class="headline">
       <h2>Full Stack Web Developer</h2>
     </div>
