Changed background color and organized styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <body>
     <h1>Nicholas Guzy</h1>
     <!-- <video class="video-background" autoplay loop> <source src="./background.mp4"> </video> -->
+    <section>
     <img class="portfolioPicture" src="./img/portfolioPicture.jpg" />
     <div class="headline">
-      <h2>Full Stack Web Developer</h2>
+      
     </div>
     <div class="bio">
       <p><strong>
@@ -20,7 +21,9 @@
         bootcamp learning many languages and skills. Among those are (HTML, CSS,
         Javascript, C#, React, .NET, MySQL, NOSQL, API, and Jest)
       </strong></p>
-    </div> 
+    </div>
+  </section>
+  <h2>Full Stack Web Developer</h2>
+    </body>
   </body>
 </html>
-
