Mission section added

--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
       <p><strong>
         Driven to solve problems. I recently graduated from the Epicodus
         bootcamp learning many languages and skills. Among those are (HTML, CSS,
-        Javascript, C#, React, .NET, MySQL, NOSQL, API, and Jest)
+        Javascript, C#, React, .NET, MySQL, NOSQL, API, and Jest).
       </strong></p>
     </div>
   </section>
   <h2>Full Stack Web Developer</h2>
+<hr>
+<h2>My Mission</h2>
+<div class="mission">
+<p><strong>I enjoy learning and solving problems. My mission is to learn everything I can about technology and to help others. Through my passion for solving problems and thirst for knowledge I hope to improve others lives.</strong></p>
+</div>
+<h1></h1>
     </body>
   </body>
 </html>
