Work section added, footer, and more styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
 <div class="mission">
 <p><strong>I enjoy learning and solving problems. My mission is to learn everything I can about technology and to help others. Through my passion for solving problems and thirst for knowledge I hope to improve others lives.</strong></p>
 </div>
-<h1></h1>
+<hr>
+<h2>My Work</h2>
+<div class="work">
+  <ol>
+<li><strong><a href="https://github.com/Nick-Guzy/Coffee-Shop">My Coffee-Shop</a></strong></li>
+<li><strong><a href="https://github.com/Nick-Guzy/gees">Gee's Calm Balm</a></strong></li>
+<li><strong><a href="https://github.com/Nick-Guzy/planetary-ages">Planetary-Ages</a></strong></li>
+</ol>
+</div>
+<footer>
+  <p>Nicholas Guzy | linkedin.com/in/nicholas-guzy/ | github.com/Nick-Guzy</p>
+</footer>
     </body>
   </body>
 </html>
